# prob-presentation

./: Probability.bib
presentation/: .latexmkrc  presentation.aux  presentation.bbl  presentation.bcf  presentation.blg  presentation.fdb_latexmk  presentation.fls  presentation.lhs  presentation.nav  presentation.out  presentation.ptb  presentation.pyg  presentation.run.xml  presentation.snm  presentation.tex  presentation.toc  presentation.vrb
presentation/auto/: presentation.el
probability/: Listy.agda  Listy.agdai  Measure.agda  Measure.agdai
probability-haskell.hsproj/: .uuid
probability-haskell.hsproj/probability-presentation/: Free.hs  Main.hs  _Free.hsplay  _Main.hsplay  probabilitypresentation.cabal
probability-haskell.hsproj/probability-presentation/.stack-work/install/x86_64-osx/lts-9.6/8.0.2/flag-cache/: StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  base-orphans-0.6-AbJ3lKVXygDCG0eeQEv8Iu  cabal-doctest-1.0.2-7qDWi4QMBieCUnNAxkUwxe  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  comonad-5.0.2-Fq9Xy9jdx6uIyJZn00E6Yc  contravariant-1.4-29zF0Im431177ovfbHYCGv  distributive-0.5.3-IX4kyVcHAyoH4uFYrsjY1R  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  parallel-3.2.1.1-KQJHWCcq2Ka569Stb10nhx  prelude-extras-0.4.0.3-BhL9U5k7NtGJn1itwIHt2Y  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  reflection-2.1.2-Bem12O1xFGSHr4C2Hyu1c4  semigroups-0.18.3-5xL9BgkWQsCGwo6YahyMCM  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tagged-0.8.5-1mTloBSoUxv8dqUr8XBGBt  th-abstraction-0.2.6.0-HRFJgpoqs5HJ5LgHnjmMhQ  transformers-compat-0.5.1.4-IuFogs8HAVUJBWVNMhtssu  void-0.7.2-4PWwLjXxAER9U3zGpDhf6e
probability-haskell.hsproj/probability-presentation/Control/Monad/Prob/: Choice.hs  Class.hs  Cofree.hs  Free.hs  Giry.hs  List.hs  Weight.hs  _Cofree.hsplay  _Weight.hsplay
probability-haskell.hsproj/probability-presentation/Control/Monad/Weight/: Free.hs  List.hs  _List.hsplay
probability-haskell.hsproj/probability-presentation/Data/: Heap.hs
python-code-examples/: boygirl.py  pip-selfcheck.json  roll_die.py
(+11 files in other folders)
