name: probabilitypresentation
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable probabilitypresentation
    main-is: Main.hs
    build-depends:
        base -any,
        free -any,
        linear -any
    default-language: Haskell2010
    other-modules:
        Free
        Data.Heap

