name: probabilitypresentation
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable probabilitypresentation
    main-is: Main.hs
    build-depends:
        pretty -any,
        binary-tree -any,
        base -any,
        lens -any,
        free -any,
        linear -any,
        containers -any
    default-language: Haskell2010
    other-modules:
        Control.Monad.Prob.Class
        Control.Monad.Prob.Weight
        Control.Monad.Prob.Choice
        Control.Monad.Prob.List
        Data.Heap

