name: probabilitypresentation
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable probabilitypresentation
    main-is: Main.hs
    build-depends:
        comonad -any,
        mtl -any,
        base -any,
        lens -any,
        free -any,
        containers -any
    default-language: Haskell2010
    other-modules:
        Control.Monad.Weight.Free
        Control.Monad.Weight.List
        Control.Monad.Prob.Free
        Control.Monad.Prob.Cofree
        Control.Monad.Prob.Giry
        Control.Monad.Prob.Class
        Data.Heap

